--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "react-hook-form": "^7.54.1",
     "react-native": "0.75.4",
     "react-native-bootsplash": "^6.3.2",
+    "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-fast-secure-storage": "^1.2.1",
     "react-native-image-picker": "^7.2.3",
     "react-native-reanimated": "^3.16.5",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
+    "react-native-svg": "^15.10.1",
+    "react-native-svg-transformer": "^1.5.0",
     "react-redux": "^9.2.0",
     "yup": "^1.5.0"
   },
